# ompu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ompu.jucer
include/ompu/: component_id.hpp  config.hpp  def_helper.hpp  def_helper_undef.hpp  geo.hpp  io.hpp  midi.hpp  music.hpp  music_fwd.hpp  ompu_fwd.hpp  ompu_lib.hpp  ui_fwd.hpp  util.hpp  version.hpp
include/ompu/game/: error.hpp  event.hpp  event_handler.hpp  game.hpp  game_data.hpp  game_data_snapshot.hpp  game_fwd.hpp  gc.hpp  scene.hpp  scheduler.hpp  session.hpp  visitor.hpp
include/ompu/geo/: geo.hpp  idents.hpp  models.hpp  ratio.hpp  strats.hpp
include/ompu/io/: chord_score.hpp  io.hpp  io_fwd.hpp
include/ompu/io/in/: chord_pro.hpp
include/ompu/juicy/: karma_warnings.hpp  qi_warnings.hpp
include/ompu/midi/: filter.hpp  io.hpp  message.hpp  midi_fwd.hpp  spec.hpp  sysex.hpp
include/ompu/music/: blob.hpp  chord.hpp  chord_classifier.hpp  chord_note.hpp  chord_note_set.hpp  chord_traits.hpp  concrete.hpp  debug.hpp  degree.hpp  degreed_chord.hpp  diatonic.hpp  factory.hpp  ident.hpp  interval.hpp  io.hpp  key.hpp  key_feel.hpp  key_feels.hpp  key_ident.hpp  key_sign.hpp  key_traits.hpp  mod.hpp  music_fwd.hpp  music_traits.hpp  note.hpp  part.hpp  relation.hpp  resolver.hpp  scale.hpp  scale_def.hpp  scale_traits.hpp  song.hpp  symbol.hpp  tone.hpp  tone_types.hpp  track.hpp  traits.hpp  type_traits.hpp
include/ompu/music/concrete/: chord.hpp  chord_detector.hpp  chord_identity.hpp  context.hpp  error.hpp  interval.hpp  key.hpp  note.hpp  types.hpp
include/ompu/music/detail/: debug_all.hpp  symbol_names.hpp
include/ompu/plug/: app.hpp  app_fwd.hpp  audio_callback.hpp  device_manager.hpp  error.hpp  host_fwd.hpp  io.hpp  logger.hpp  util.hpp
include/ompu/plug/base/: app_component.hpp
include/ompu/plug/game/: drawer.hpp  event_handler.hpp  ui_set.hpp  (+2 more)
include/ompu/ui/: all.hpp  bass.hpp  component.hpp  key_status.hpp  keyboard.hpp  synth.hpp
include/ompu/version/: version.hpp  version_set.hpp
src/: CMakeLists.txt  component_id.cpp  ompu_io.cpp  ompu_lib.cpp  ompu_util.cpp  version.cpp
src/game/: database.cpp  error.cpp  event.cpp  event_handler.cpp  game_data.cpp  game_data_snapshot.cpp  gc.cpp  scheduler.cpp  session.cpp
src/geo/: geo.cpp  idents.cpp  models.cpp
src/io/in/: chord_pro.cpp
src/midi/: filter.cpp  message.cpp  midi_io.cpp  sysex.cpp
src/music/: music_blob.cpp
src/music/concrete/: chord.cpp  chord_detector.cpp  chord_identity.cpp  context.cpp  interval.cpp  key.cpp  note.cpp  types.cpp
src/plug/: app.cpp  audio_callback.cpp  plug_io.cpp
src/plug/game/: drawer.cpp  plug_event_handler.cpp  ui_set.cpp  updater.cpp
src/plug/game/drawer/: drawer_keyboard.cpp  drawer_synth.cpp
src/plug/game/updater/: updater_keyboard.cpp  updater_synth.cpp
src/plug/gui/: apocalypse_indicator.cpp  apocalypse_indicator.h  audio_input.h  config_window.cpp  config_window.h  config_window_app.cpp  config_window_app.h  config_window_audio.cpp  config_window_audio.h  config_window_home.cpp  config_window_home.h  config_window_midi.cpp  config_window_midi.h  game_window.cpp  game_window.h  logo.cpp  logo.h  midi_channel_list.cpp  midi_channel_list.h  midi_config.cpp  midi_config.h  midi_input.h  mixer.cpp  mixer.h  mixer_channel.cpp  mixer_channel.h  mixer_plugin.cpp  mixer_plugin.h  navbar.h  title.h  world_input.h
src/plug/host/: filter_graph.cpp  filter_io_config.cpp  graph_editor_panel.cpp  host_app.cpp  host_window.cpp  internal_filter.cpp
src/ui/: component.BAK  component.cpp  key_status.cpp
src/version/: version.cpp
test/: CMakeLists.txt  gtest_main.cpp
test/include/: ompu_test.hpp
test/include/ompu_test/: bridge.hpp
(+8 files in other folders)
